--- a/consumer/pyproject.toml
+++ b/consumer/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 ]
 dependencies = [
     "django>=4.2.2",
+    "celery>=5.3.1",
+    "pika>=1.3.2",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
